--- a/templates/cadastro_candidato.html
+++ b/templates/cadastro_candidato.html
@@ -13,7 +13,7 @@
 </header>
 <body>
     <div class="card">
-        <h2>Cadastro de Candidato</h2>
+        <h1>Cadastro de Candidato</h1>
         <form action="#" method="post">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
@@ -23,9 +23,10 @@
 
             <label for="CPF">CPF:</label>
             <input type="text" id="CPF" name="CPF" required>
+
             <label for="Cargo">Cargo:</label>
             <select id="cargo" name="cargo" required>
-                <option value="" disabled selected>Selecione o Cargo</option>
+                <option disabled selected>Selecione o Cargo</option>
                 <option value="comite">Comitê</option>
                 <option value="defensor_publico">Defensor Público</option>
             </select>
