--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,7 @@
         
     </header>
     <body>
+        <h1>E-Votos Login</h1>
         <div>
             <form action="#" method="POST">
                 {% csrf_token %}
@@ -27,6 +28,8 @@
                 <button type="submit">Entrar</button>
             </form>
             <a href="{% url 'cadastro_eleitor' %}">Cadastro de Eleitor</a>
+
+            <a href="{% url 'recuperar_senha' %}">Recuperar Senha</a>
         </div>
     </body>
 </body>
