modified: admin,models,urls,utils,views

--- a/templates/adm_home.html
+++ b/templates/adm_home.html
@@ -45,7 +45,7 @@
             <img src="" alt="" />
             <div class="">
                 <h5>ELEIÇÃO</h5>
-                <a href="./cadastro_cargo.html">Gerar Eleição</a>
+                <a href="{% url 'nova_eleicao' %}">Gerar Eleição</a>
                 <a href="">Modificar Eleição</a>
                 <a href="">Completar Eleição</a>
             </div>
