--- a/templates/cadastro_candidato.html
+++ b/templates/cadastro_candidato.html
@@ -14,25 +14,26 @@
 <body>
     <div class="card">
         <h1>Cadastro de Candidato</h1>
-        <form action="#" method="post">
+        {% if msg %}
+            <p>{{ msg }}</p>
+        {% endif %} 
+        <form method="POST" enctype="multipart/form-data">
+        <!-- <form action="{% url 'cadastro_candidato' %}" method="POST"> -->
+            {% csrf_token %}
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
 
-            <label for="Matricula">Matricula:</label>
-            <input type="text" id="Matricula" name="Matricula" required>
+            <label for="matricula">Matricula:</label>
+            <input type="text" id="matricula" name="matricula" required>
 
-            <label for="CPF">CPF:</label>
-            <input type="text" id="CPF" name="CPF" required>
+            <label for="cpf">CPF:</label>
+            <input type="text" id="cpf" name="cpf" required>
 
-            <label for="Cargo">Cargo:</label>
-            <select id="cargo" name="cargo" required>
-                <option disabled selected>Selecione o Cargo</option>
-                <option value="comite">Comitê</option>
-                <option value="defensor_publico">Defensor Público</option>
-            </select>
+            <label for="foto_perfil">Foto de Perfil:</label>
+            <input type="file" id="foto_perfil" name="foto_perfil" accept="image/*" required>
 
             <button type="submit">Cadastrar Candidato</button>
         </form>
-        </div>
+    </div>
 </body>
 </html>
