--- a/templates/nova_eleicao.html
+++ b/templates/nova_eleicao.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="{% static 'css/nova_eleicao.css' %}">
     <title>Criar nova Eleição</title>
 </head>
+
+<style>
+    table, th, td {
+        border: 1px solid;
+    }
+</style>
+
 <header>
 
 </header>
@@ -38,6 +45,7 @@
             <table>
                 <thead>
                     <tr>
+                        <th>Foto</th>
                         <th>Matrícula</th>
                         <th>Nome</th>
                         <th>CPF</th>
@@ -46,7 +54,8 @@
                 </thead>
                 <tbody>
                     {% for cand in candidatos %}
-                        <tr>
+                        <tr>                
+                            <td><img src="/media/{{ cand.foto_perfil }}" width="50" height="50"></td>
                             <td>{{ cand.matricula }}</td>
                             <td>{{ cand.nome }}</td>
                             <td>{{ cand.cpf }}</td>
