--- a/static/css/login.css
+++ b/static/css/login.css
@@ -2,18 +2,37 @@
     padding: 0;
     margin: 0;
 }
-header{
-    height: 7vh;
-    width: 100vw;
-    background-color: purple;
-}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     text-align: center;
+}
+.main-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
+.left{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: auto;
+   
+    flex-direction: column;
+}
 
+.right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: auto;
+   
+    flex-direction: column;
+}
 form {
     width: 300px;
     margin: 0 auto;
@@ -47,3 +66,4 @@ button {
 button:hover {
     background-color: #45a049;
 }
+
