--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,20 @@
 {% load static %}
-{% include '_header.html' %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
-    
-    <title>
-        Defensoria Votação
-    </title>
+    <title>Urna Digital DPDF</title>
 </head>
-<script src="../templates/_header.html"></script>
+<!-- <script src="../templates/_header.html"></script> -->
 <body>
-    
-    <body>
+    {% include '_header.html' %}
     <div class="main-container">
         <div class="left">
         <img src="../static/img/login_img.gif" alt="Gif Animado">
-        <a href="https://storyset.com/user">User illustrations by Storyset</a>
+        <!-- <a href="https://storyset.com/user">User illustrations by Storyset</a> -->
         </div>
         
         <div class="right">
@@ -39,5 +35,5 @@
         </div>
     </div>
         
-    </body>
+</body>
 </html>
