--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
     <div class="main-container">
         <div class="left">
         <img src="../static/img/login_img.gif" alt="Gif Animado">
-        <!-- <a href="https://storyset.com/user">User illustrations by Storyset</a> -->
+        <a href="https://storyset.com/user">User illustrations by Storyset</a>
         </div>
         <div class="right">
             <h1>Urna Digital DPDF</h1>
@@ -22,7 +22,6 @@
                 {% csrf_token %}
                 <label for="login">Email:</label>
                 <input type="text" id="email" name="email" required>
-                .
                 <label for="senha">Senha:</label>
                 <input type="password" id="password" name="password" required>
         
