--- a/templates/adm_home.html
+++ b/templates/adm_home.html
@@ -27,7 +27,7 @@
             <!-- <img src="" alt=""/> -->
             <h5>CANDIDATO</h5>
             <a href="{% url 'cadastro_candidato' %}">Cadastrar</a>
-            <a href="">Editar</a>
+            <a href="{% url 'editar_candidato' %}">Editar</a>
         </div>
 
         <div class="card">
