--- a/templates/login.html
+++ b/templates/login.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <title>Urna Digital DPDF</title>
 </head>
-<!-- <script src="../templates/_header.html"></script> -->
+
 <body>
     {% include '_header.html' %}
     <div class="main-container">
         <div class="left">
         <img src="../static/img/login_img.gif" alt="Gif Animado">
-        <!-- <a href="https://storyset.com/user">User illustrations by Storyset</a> -->
+        <a href="https://storyset.com/user">User illustrations by Storyset</a>
         </div>
         <div class="right">
             <h1>Urna Digital DPDF</h1>
