--- a/templates/_header.html
+++ b/templates/_header.html
@@ -34,5 +34,7 @@ header{
     <a class="lk" href="#">
         <img class="pic" src="{% static 'img/logo_dpdf.png' %}" alt="Logo DPDF" />
     </a>
-    <a class="logout" href="{% url 'logout' %}">Logout</a>
+    {% if user.is_authenticated %}
+        <a class="logout" href="{% url 'logout' %}">Logout</a>
+    {% endif %}
 </header>
