--- a/templates/adm_home.html
+++ b/templates/adm_home.html
@@ -1,19 +1,8 @@
+{% extends '_base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/adm_home.css' %}" />
-    <title>Admin Home</title>
-</head>
-
-<body>
-
-    {% include  '_header.html' %}
-
+{% block content %}
+<section>
     <h1>ADMIN</h1>
     <div class="card-container">
         <div class="card">
@@ -54,6 +43,5 @@
 
 
     <a href="{% url 'logout' %}">Logout</a>
-
-</body>
-</html>
+</section>
+{% endblock %}
