--- a/templates/login.html
+++ b/templates/login.html
@@ -9,13 +9,14 @@
     </div>
 
     <div class="login-form-container">
-        <h1>Urna Digital DPDF</h1>
+        
         <form class="login-form" action="#" method="POST">
+            <h1>Urna Digital DPDF</h1>
             {% csrf_token %}
-            <label for="login">Email:</label>
+            <label for="login">Email</label>
             <input type="text" id="email" name="email" required>
     
-            <label for="senha">Senha:</label>
+            <label for="senha">Senha</label>
             <input type="password" id="password" name="password" required>
     
             <button class="login-form-button" type="submit">Entrar</button>
