--- a/templates/adm_home.html
+++ b/templates/adm_home.html
@@ -1,59 +1,45 @@
+{% extends '_base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="pt-br">
+{% block content %}
+    <section>
+        <h1>ADMIN</h1>
+        <div class="card-container">
+            <div class="card">
+                <!-- <img src="" alt=""/> -->
+                <h5>ELEITOR</h5>
+                <a href="{% url 'cadastro_eleitor' %}">Cadastrar</a>
+                <a href="">Editar</a>
+            </div>
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/adm_home.css' %}" />
-    <title>Admin Home</title>
-</head>
+            <div class="card">
+                <!-- <img src="" alt=""/> -->
+                <h5>CANDIDATO</h5>
+                <a href="{% url 'cadastro_candidato' %}">Cadastrar</a>
+                <a href="{% url 'editar_candidatos_todos' %}">Editar</a>
+            </div>
 
-<body>
+            <div class="card">
+                <!-- <img src="" alt=""/> -->
+                <h5>ELEIÇÃO</h5>
+                <a href="{% url 'nova_eleicao' %}">Nova Eleição</a>
+                <a href="">Editar</a>
+            </div>
 
-    {% include  '_header.html' %}
+            <div class="card">
+                <!-- <img src="" alt=""/> -->
+                <h5>VOTAÇÃO</h5>
+                <a href="">Acompanhar Votação</a>
+            </div>
 
-    <h1>ADMIN</h1>
-    <div class="card-container">
-        <div class="card">
-            <!-- <img src="" alt=""/> -->
-            <h5>ELEITOR</h5>
-            <a href="{% url 'cadastro_eleitor' %}">Cadastrar</a>
-            <a href="">Editar</a>
+            <div class="card">
+                <!-- <img src="" alt=""/> -->
+                <h5>RELATÓRIOS</h5>
+                <a href="">Gerar Resultado</a>
+                <a href="">Ver Resultado</a>
+            </div>
         </div>
 
-        <div class="card">
-            <!-- <img src="" alt=""/> -->
-            <h5>CANDIDATO</h5>
-            <a href="{% url 'cadastro_candidato' %}">Cadastrar</a>
-            <a href="{% url 'editar_candidato' %}">Editar</a>
-        </div>
-
-        <div class="card">
-            <!-- <img src="" alt=""/> -->
-            <h5>ELEIÇÃO</h5>
-            <a href="{% url 'nova_eleicao' %}">Nova Eleição</a>
-            <a href="">Editar</a>
-        </div>
-
-        <div class="card">
-            <!-- <img src="" alt=""/> -->
-            <h5>VOTAÇÃO</h5>
-            <a href="">Acompanhar Votação</a>
-        </div>
-
-        <div class="card">
-            <!-- <img src="" alt=""/> -->
-            <h5>RELATÓRIOS</h5>
-            <a href="">Gerar Resultado</a>
-            <a href="">Ver Resultado</a>
-        </div>
-    
-    </div>
-
-
-    <a href="{% url 'logout' %}">Logout</a>
-
-</body>
-</html>
+        <a href="{% url 'logout' %}">Logout</a>
+    </section>
+{% endblock %}
