create edit endpoints

--- a/templates/editar_candidato.html
+++ b/templates/editar_candidato.html
@@ -12,10 +12,10 @@
         <li> {{ candidato.nome }} </li>
     </ol>   
 
-    <form action="{% url 'cadastro_candidato' %}" method="POST">
+    <form action="{% url 'editar_candidato' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
-        <img src="/media/{{ candidato.foto_perfil }}" alt="foto de perfil">
+        <img name="foto_perfil" id="foto_perfil" src="/media/{{ candidato.foto_perfil }}" accept="image/*" alt="foto de perfil">
 
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" value="{{ candidato.nome }}" required>
@@ -27,7 +27,7 @@
         <input type="text" id="cpf" name="cpf" value="{{ candidato.cpf }}" required>
 
         <label for="foto_perfil">Foto de Perfil:</label>
-        <input type="file" id="foto_perfil" name="foto_perfil" accept="image/*" value="{{ candidato.foto_perfil }}" required>
+        <input type="file" id="new_foto_perfil" name="new_foto_perfil" accept="image/*">
 
         <button type="submit">Editar Candidato</button>
     </form>
