CRUD candidatos and eleitores: ok

--- a/templates/adm_home.html
+++ b/templates/adm_home.html
@@ -10,7 +10,7 @@
                     
                     <h5>ELEITOR</h5>
                     <a href="{% url 'cadastro_eleitor' %}">Cadastrar</a>
-                    <a href="">Editar</a>
+                    <a href="{% url 'editar_eleitores_todos' %}">Editar</a>
                 </div>
     
                 <div style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4yrShmdGBimsQcMXXSJGaVZFrHyVL-7XHag&usqp=CAU');" class="adm-card">
